# CMake project for hMSX
cmake_minimum_required (VERSION 3.8)

project ("hMailServerX")

set(CMAKE_CXX_STANDARD 17)

# Set preprocessor macros
if(MSVC)
    add_definitions(-D_CRT_SECURE_NO_WARNINGS)
    add_definitions(-D_SCL_SECURE_NO_WARNINGS)
    add_definitions(-D_UNICODE -DUNICODE)
	add_definitions(-DVC_EXTRALEAN)
	add_definitions(-DNOMINMAX)
	add_definitions(-DBOOST_DATE_TIME_NO_LIB)
	add_definitions(-DSTRICT)
endif()


# Find OpenSSL package
find_package(OpenSSL REQUIRED)

# Find BOOST package
find_package(Boost REQUIRED COMPONENTS thread)

# Additinal headers
list(APPEND A_HEADER_FILES
	"${HMAIL_SERVER_LIBS}/msvc/v143/x86_64/cares/include/ares.h"
	"${HMAIL_SERVER_LIBS}/msvc/v143/x86_64/postgres/include/pg_config_ext.h"
    "${HMAIL_SERVER_LIBS}/msvc/v143/x86_64/postgres/include/libpq-fe.h"
    "${HMAIL_SERVER_LIBS}/msvc/v143/x86_64/postgres/include/postgres_ext.h"
)

# Additional libraries
list(APPEND A_LIB_FILES    
	"${HMAIL_SERVER_LIBS}/msvc/v143/x86_64/cares/lib/cares.lib"
    "${HMAIL_SERVER_LIBS}/msvc/v143/x86_64/postgres/lib/libpq.lib"
    
)

# List of Header files
set(HEADER_FILES 	
	"Common/AntiSpam/AntiSpamConfiguration.h"   
    "Common/AntiSpam/DKIM/Canonicalization.h"   
    "Common/AntiSpam/DKIM/DKIM.h"   
    "Common/AntiSpam/DKIM/DKIMParameters.h"
    "Common/AntiSpam/DKIM/DKIMSigner.h"
    "Common/AntiSpam/DKIM/SpamTestDKIM.h"
    "Common/AntiSpam/SpamAssassin/SpamAssassinClient.h"
    "Common/AntiSpam/SpamAssassin/SpamAssassinTestConnect.h"
    "Common/AntiSpam/SpamProtection.h"
    "Common/AntiSpam/SpamTest.h"
    "Common/AntiSpam/SpamTestData.h"
    "Common/AntiSpam/SpamTestDNSBlackLists.h"
    "Common/AntiSpam/SpamTestHeloHost.h"
    "Common/AntiSpam/SpamTestMXRecords.h"
    "Common/AntiSpam/SpamTestPTR.h"
    "Common/AntiSpam/SpamTestResult.h"
    "Common/AntiSpam/SpamTestRunner.h"
    "Common/AntiSpam/SpamTestSpamAssassin.h"
    "Common/AntiSpam/SpamTestSPF.h"
    "Common/AntiSpam/SpamTestSURBL.h"
    "Common/AntiSpam/SURBL.h"
    "Common/AntiSpam/WhiteListCache.h"
    "Common/AntiVirus/AntiVirusConfiguration.h"
    "Common/AntiVirus/ClamAVVirusScanner.h"
    "Common/AntiVirus/ClamWinVirusScanner.h"
    "Common/AntiVirus/CustomVirusScanner.h"
    "Common/AntiVirus/VirusScanner.h"
    "Common/AntiVirus/VirusScannerTester.h"
    "Common/AntiVirus/VirusScanningResult.h"
    "Common/Application/ACLManager.h"
    "Common/Application/Application.h"
    "Common/Application/Configuration.h"
    "Common/Application/Constants.h"
    "Common/Application/DefaultDomain.h"
    "Common/Application/Dictionary.h"
    "Common/Application/ErrorManager.h"
    "Common/Application/ExceptionHandler.h"
    "Common/Application/FolderManager.h"
    "Common/Application/IniFileSettings.h"
    "Common/Application/Logger.h"
    "Common/Application/MessageIndexer.h"
    "Common/Application/ObjectCache.h"
    "Common/Application/Property.h"
    "Common/Application/PropertySet.h"
    "Common/Application/Reinitializator.h"
    "Common/Application/RemoveExpiredRecords.h"
    "Common/Application/Scheduler.h"
    "Common/Application/SessionManager.h"
    "Common/Application/TimeoutCalculator.h"
    "Common/BO/Account.h"
    "Common/BO/Accounts.h"
    "Common/BO/ACLPermission.h"
    "Common/BO/ACLPermissions.h"
    "Common/BO/Alias.h"
    "Common/BO/Aliases.h"
    "Common/BO/Attachment.h"
    "Common/BO/Attachments.h"
    "Common/BO/BlockedAttachment.h"
    "Common/BO/BlockedAttachments.h"
    "Common/BO/BusinessObject.h"
    "Common/BO/Collection.h"
    "Common/BO/DistributionList.h"
    "Common/BO/DistributionListRecipient.h"
    "Common/BO/DistributionListRecipients.h"
    "Common/BO/DistributionLists.h"
    "Common/BO/DNSBlackList.h"
    "Common/BO/DNSBlackLists.h"
    "Common/BO/Domain.h"
    "Common/BO/DomainAlias.h"
    "Common/BO/DomainAliases.h"
    "Common/BO/Domains.h"
    "Common/BO/FetchAccounts.h"
    "Common/BO/FetchAccountUID.h"
    "Common/BO/FetchAccountUIDs.h"
    "Common/BO/GreyListingWhiteAddress.h"
    "Common/BO/GreyListingWhiteAddresses.h"
    "Common/BO/GreyListTriplet.h"
    "Common/BO/Group.h"
    "Common/BO/GroupMember.h"
    "Common/BO/GroupMembers.h"
    "Common/BO/Groups.h"
    "Common/BO/IMAPFolder.h"
    "Common/BO/IMAPFolders.h"
    "Common/BO/IncomingRelay.h"
    "Common/BO/IncomingRelays.h"
    "Common/BO/init_account.h"
    "Common/BO/Message.h"
    "Common/BO/MessageData.h"
    "Common/BO/MessageMetaData.h"
    "Common/BO/MessageRecipient.h"
    "Common/BO/MessageRecipients.h"
    "Common/BO/Messages.h"
    "Common/BO/Route.h"
    "Common/BO/RouteAddress.h"
    "Common/BO/RouteAddresses.h"
    "Common/BO/Routes.h"
    "Common/BO/Rule.h"
    "Common/BO/RuleAction.h"
    "Common/BO/RuleActions.h"
    "Common/BO/RuleCriteria.h"
    "Common/BO/RuleCriterias.h"
    "Common/BO/Rules.h"
    "Common/BO/ScheduledTask.h"
    "Common/BO/SecurityRange.h"
    "Common/BO/SecurityRanges.h"
    "Common/BO/ServerMessage.h"
    "Common/BO/ServerMessages.h"
    "Common/BO/SSLCertificate.h"
    "Common/BO/SSLCertificates.h"
    "Common/BO/SURBLServer.h"
    "Common/BO/SURBLServers.h"
    "Common/BO/TCPIPPort.h"
    "Common/BO/TCPIPPorts.h"
    "Common/BO/WhiteListAddress.h"
    "Common/BO/WhiteListAddresses.h"
    "Common/Cache/AccountSizeCache.h"
    "Common/Cache/Cache.h"
    "Common/Cache/CacheConfiguration.h"
    "Common/Cache/CacheContainer.h"
    "Common/Cache/CachedMessages.h"
    "Common/Cache/CachedObject.h"
    "Common/Cache/CacheReaderWithDbFallback.h"
    "Common/Cache/InboxIDCache.h"
    "Common/Cache/MessageCache.h"
    "Common/Mime/CodePages.h"
    "Common/Mime/Mime.h"
    "Common/Mime/MimeChar.h"
    "Common/Mime/MimeCode.h"
    "Common/Mime/MimeTester.h"
    "Common/Persistence/Maintenance/Maintenance.h"
    "Common/Persistence/NameChanger.h"
    "Common/Persistence/PersistenceMode.h"
    "Common/Persistence/PersistentAccount.h"
    "Common/Persistence/PersistentACLPermission.h"
    "Common/Persistence/PersistentAlias.h"
    "Common/Persistence/PersistentBlockedAttachment.h"
    "Common/Persistence/PersistentDistributionList.h"
    "Common/Persistence/PersistentDistributionListRecipient.h"
    "Common/Persistence/PersistentDNSBlacklist.h"
    "Common/Persistence/PersistentDomain.h"
    "Common/Persistence/PersistentDomainAlias.h"
    "Common/Persistence/PersistentFetchAccount.h"
    "Common/Persistence/PersistentFetchAccountUID.h"
    "Common/Persistence/PersistentGreyList.h"
    "Common/Persistence/PersistentGreyListingWhiteAddress.h"
    "Common/Persistence/PersistentGroup.h"
    "Common/Persistence/PersistentGroupMember.h"
    "Common/Persistence/PersistentIMAPFolder.h"
    "Common/Persistence/PersistentIncomingRelay.h"
    "Common/Persistence/PersistentLogonFailure.h"
    "Common/Persistence/PersistentMessage.h"
    "Common/Persistence/PersistentMessageMetaData.h"
    "Common/Persistence/PersistentMessageRecipient.h"
    "Common/Persistence/PersistentRoute.h"
    "Common/Persistence/PersistentRouteAddress.h"
    "Common/Persistence/PersistentRule.h"
    "Common/Persistence/PersistentRuleAction.h"
    "Common/Persistence/PersistentRuleCriteria.h"
    "Common/Persistence/PersistentSecurityRange.h"
    "Common/Persistence/PersistentServerMessage.h"
    "Common/Persistence/PersistentSSLCertificate.h"
    "Common/Persistence/PersistentSURBLServer.h"
    "Common/Persistence/PersistentTCPIPPort.h"
    "Common/Persistence/PersistentWhiteListAddress.h"
    "Common/Persistence/PreSaveLimitationsCheck.h"
    "Common/SQL/ColumnPositionCache.h"
    "Common/SQL/DALConnection.h"
    "Common/SQL/DALConnectionFactory.h"
    "Common/SQL/DALRecordset.h"
    "Common/SQL/DALRecordsetFactory.h"
    "Common/SQL/DatabaseConnectionManager.h"
    "Common/SQL/DatabaseSettings.h"
    "Common/SQL/IPAddressSQLHelper.h"
    "Common/SQL/Macros/IMacroExpander.h"
    "Common/SQL/Macros/Macro.h"
    "Common/SQL/Macros/MacroParser.h"
    "Common/SQL/Macros/PGSQLMacroExpander.h"
    "Common/SQL/PGConnection.h"
    "Common/SQL/PGRecordset.h"
    "Common/SQL/Prerequisites/IPrerequisite.h"
    "Common/SQL/Prerequisites/PreReqNoDuplicateFolders.h"
    "Common/SQL/Prerequisites/PrerequisiteList.h"
    "Common/SQL/SQLCommand.h"
    "Common/SQL/SQLParameter.h"
    "Common/SQL/SQLScriptParser.h"
    "Common/SQL/SQLScriptRunner.h"
    "Common/SQL/SQLStatement.h"
    "Common/TCPIP/CertificateVerifier.h"
    "Common/TCPIP/CipherInfo.h"
    "Common/TCPIP/DNSRecord.h"
    "Common/TCPIP/DNSResolver.h"
    "Common/TCPIP/DNSResolverWinApi.h"
    "Common/TCPIP/HostNameAndIpAddress.h"
    "Common/TCPIP/hRMS/hRMS_Domains.h"
    "Common/TCPIP/hRMS/hRMS_server_main.h"
    "Common/TCPIP/IOOperation.h"
    "Common/TCPIP/IOOperationQueue.h"
    "Common/TCPIP/IOQueueWorkerTask.h"
    "Common/TCPIP/IOService.h"
    "Common/TCPIP/IPAddress.h"
    "Common/TCPIP/LocalIPAddresses.h"
    "Common/TCPIP/SocketConstants.h"
    "Common/TCPIP/SslContextInitializer.h"
    "Common/TCPIP/SynchronousConnection.h"
    "Common/TCPIP/TCPConnection.h"
    "Common/TCPIP/TCPConnectionFactory.h"
    "Common/TCPIP/TCPServer.h"
    "Common/Threading/AsynchronousTask.h"
    "Common/Threading/Task.h"
    "Common/Threading/WorkQueue.h"
    "Common/Threading/WorkQueueManager.h"
    "Common/Tracking/ChangeNotification.h"
    "Common/Tracking/NotificationClient.h"
    "Common/Tracking/NotificationClientSubscription.h"
    "Common/Tracking/NotificationServer.h"
    "Common/Util/AccountLogon.h"
    "Common/Util/AWStats.h"
    "Common/Util/BlowFish.h"
    "Common/Util/ByteBuffer.h"
    "Common/Util/Charset.h"
    "Common/Util/Crypt.h"
    "Common/Util/EmailAllUsers.h"
    "Common/Util/Encoding/Base64.h"
    "Common/Util/Encoding/ModifiedUTF7.h"
    "Common/Util/Event.h"
    "Common/Util/EventTester.h"
    "Common/Util/ExceptionLogger.h"
    "Common/Util/File.h"
    "Common/Util/FileInfo.h"
    "Common/Util/FileUtilities.h"
    "Common/Util/FolderManipulationLock.h"
    "Common/Util/GUIDCreator.h"
    "Common/Util/Hashing/HashCreator.h"
    "Common/Util/HTTPClient.h"
    "Common/Util/MailerDaemonAddressDeterminer.h"
    "Common/Util/Math.h"
    "Common/Util/MessageAttachmentStripper.h"
    "Common/Util/MessageUtilities.h"
    "Common/Util/Parsing/AddresslistParser.h"
    "Common/Util/Parsing/StringParser.h"
    "Common/Util/Parsing/StringTreeParser.h"
    "Common/Util/PasswordGenerator.h"
    "Common/Util/PasswordRemover.h"
    "Common/Util/PasswordValidator.h"
    "Common/Util/RegularExpression.h"
    "Common/Util/runtime_variables.h"
    "Common/Util/ServerInfo.h"
    "Common/Util/ServerStatus.h"
    "Common/Util/SignatureAdder.h"
    "Common/Util/Singleton.h"
    "Common/Util/StdString.h"
    "Common/Util/Strings/FormatArgument.h"
    "Common/Util/Strings/Formatter.h"
    "Common/Util/Time.h"
    "Common/Util/TLD.h"
    "Common/Util/TraceHeaderWriter.h"
    "Common/Util/TransparentTransmissionBuffer.h"
    "Common/Util/Unicode.h"
    "Common/Util/Utilities.h"
    "Common/Util/VariantDateTime.h"
    "Common/Util/XMLite.h"
    "ExternalFetcher/ExternalFetch.h"
    "ExternalFetcher/ExternalFetchManager.h"
    "ExternalFetcher/ExternalFetchTask.h"
    "ExternalFetcher/FetchAccountUIDList.h"
    "ExternalFetcher/POP3ClientConnection.h"
    "IMAP/FolderListCreator.h"
    "IMAP/IMAPACLHelper.h"
    "IMAP/IMAPCommand.h"
    "IMAP/IMAPCommandAppend.h"
    "IMAP/IMAPCommandAuthenticate.h"
    "IMAP/IMAPCommandCapability.h"
    "IMAP/IMAPCommandCheck.h"
    "IMAP/IMAPCommandClose.h"
    "IMAP/IMAPCommandCopy.h"
    "IMAP/IMAPCommandCreate.h"
    "IMAP/IMAPCommandDelete.h"
    "IMAP/IMAPCommandDeleteAcl.h"
    "IMAP/IMAPCommandExamine.h"
    "IMAP/IMAPCommandExpunge.h"
    "IMAP/IMAPCommandFetch.h"
    "IMAP/IMAPCommandGetAcl.h"
    "IMAP/IMAPCommandGetQuota.h"
    "IMAP/IMAPCommandGetQuotaRoot.h"
    "IMAP/IMAPCommandIdle.h"
    "IMAP/IMAPCommandList.h"
    "IMAP/IMAPCommandListRights.h"
    "IMAP/IMAPCommandLogin.h"
    "IMAP/IMAPCommandLogout.h"
    "IMAP/IMAPCommandLSUB.h"
    "IMAP/IMAPCommandMyRights.h"
    "IMAP/IMAPCommandNamespace.h"
    "IMAP/IMAPCommandRangeAction.h"
    "IMAP/IMAPCommandRename.h"
    "IMAP/IMAPCommandSearch.h"
    "IMAP/IMAPCommandSelect.h"
    "IMAP/IMAPCommandSetAcl.h"
    "IMAP/IMAPCommandStartTls.h"
    "IMAP/IMAPCommandStatus.h"
    "IMAP/IMAPCommandStore.h"
    "IMAP/IMAPCommandSubscribe.h"
    "IMAP/IMAPCommandUID.h"
    "IMAP/IMAPCommandUnsubscribe.h"
    "IMAP/IMAPConfiguration.h"
    "IMAP/IMAPConnection.h"
    "IMAP/IMAPCopy.h"
    "IMAP/IMAPFetch.h"
    "IMAP/IMAPFetchParser.h"
    "IMAP/IMAPFolderContainer.h"
    "IMAP/IMAPFolderUtilities.h"
    "IMAP/IMAPListLookup.h"
    "IMAP/IMAPNotificationClient.h"
    "IMAP/IMAPResult.h"
    "IMAP/IMAPSearchParser.h"
    "IMAP/IMAPSimpleCommandParser.h"
    "IMAP/IMAPSort.h"
    "IMAP/IMAPSortParser.h"
    "IMAP/IMAPStore.h"
    "IMAP/MessagesContainer.h"
    "IMAP/StaticIMAPCommandHandlers.h"
    "POP3/POP3Configuration.h"
    "POP3/POP3Connection.h"
    "POP3/POP3Sessions.h"
    "SMTP/BLCheck.h"
    "SMTP/DeliveryQueue.h"
    "SMTP/DeliveryTask.h"
    "SMTP/ExternalDelivery.h"
    "SMTP/ExternalDeliveryServerResult.h"
    "SMTP/GreyListCleanerTask.h"
    "SMTP/GreyListing.h"
    "SMTP/LocalDelivery.h"
    "SMTP/MirrorMessage.h"
    "SMTP/PlusAddressing.h"
    "SMTP/RecipientParser.h"
    "SMTP/RuleApplier.h"
    "SMTP/RuleResult.h"
    "SMTP/ServerTargetResolver.h"
    "SMTP/SMTPClientConnection.h"
    "SMTP/SMTPConfiguration.h"
    "SMTP/SMTPConnection.h"
    "SMTP/SMTPDeliverer.h"
    "SMTP/SMTPDeliveryManager.h"
    "SMTP/SMTPForwarding.h"
    "SMTP/SMTPMessageHeaderCreator.h"
    "SMTP/SMTPVacationMessageCreator.h"
    "SMTP/SMTPVirusNotifier.h"
    "SMTP/SPF/Rmspf.h"
    "SMTP/SPF/SPF.h"
    "../../hMailLibs/msvc/v143/x86_64/openssl//ms/applink.c"
    "Start/pch.h"
    

)

# List of Source code files

set(SOURCE_FILES	
    "Common/AntiSpam/AntiSpamConfiguration.cpp"
    "Common/AntiSpam/DKIM/Canonicalization.cpp"
    "Common/AntiSpam/DKIM/DKIM.cpp"
    "Common/AntiSpam/DKIM/DKIMParameters.cpp"
    "Common/AntiSpam/DKIM/DKIMSigner.cpp"
    "Common/AntiSpam/DKIM/SpamTestDKIM.cpp"
    "Common/AntiSpam/SpamAssassin/SpamAssassinClient.cpp"
    "Common/AntiSpam/SpamAssassin/SpamAssassinTestConnect.cpp"
    "Common/AntiSpam/SpamProtection.cpp"
    "Common/AntiSpam/SpamTest.cpp"
    "Common/AntiSpam/SpamTestData.cpp"
    "Common/AntiSpam/SpamTestDNSBlackLists.cpp"
    "Common/AntiSpam/SpamTestHeloHost.cpp"
    "Common/AntiSpam/SpamTestMXRecords.cpp"
    "Common/AntiSpam/SpamTestPTR.cpp"
    "Common/AntiSpam/SpamTestResult.cpp"
    "Common/AntiSpam/SpamTestRunner.cpp"
    "Common/AntiSpam/SpamTestSpamAssassin.cpp"
    "Common/AntiSpam/SpamTestSPF.cpp"
    "Common/AntiSpam/SpamTestSURBL.cpp"
    "Common/AntiSpam/SURBL.cpp"
    "Common/AntiSpam/WhiteListCache.cpp"
    "Common/AntiVirus/AntiVirusConfiguration.cpp"
    "Common/AntiVirus/ClamAVVirusScanner.cpp"
    "Common/AntiVirus/ClamWinVirusScanner.cpp"
    "Common/AntiVirus/CustomVirusScanner.cpp"
    "Common/AntiVirus/VirusScanner.cpp"
    "Common/AntiVirus/VirusScannerTester.cpp"
    "Common/AntiVirus/VirusScanningResult.cpp"
    "Common/Application/ACLManager.cpp"
    "Common/Application/Application.cpp"
    "Common/Application/Configuration.cpp"
    "Common/Application/DefaultDomain.cpp"
    "Common/Application/Dictionary.cpp"
    "Common/Application/ErrorManager.cpp"
    "Common/Application/ExceptionHandler.cpp"
    "Common/Application/FolderManager.cpp"
    "Common/Application/IniFileSettings.cpp"
    "Common/Application/Logger.cpp"
    "Common/Application/MessageIndexer.cpp"
    "Common/Application/ObjectCache.cpp"
    "Common/Application/Property.cpp"
    "Common/Application/PropertySet.cpp"
    "Common/Application/Reinitializator.cpp"
    "Common/Application/RemoveExpiredRecords.cpp"
    "Common/Application/Scheduler.cpp"
    "Common/Application/SessionManager.cpp"
    "Common/Application/TimeoutCalculator.cpp"
    "Common/BO/Account.cpp"
    "Common/BO/Accounts.cpp"
    "Common/BO/ACLPermission.cpp"
    "Common/BO/ACLPermissions.cpp"
    "Common/BO/Alias.cpp"
    "Common/BO/Aliases.cpp"
    "Common/BO/Attachment.cpp"
    "Common/BO/Attachments.cpp"
    "Common/BO/BlockedAttachment.cpp"
    "Common/BO/BlockedAttachments.cpp"
    "Common/BO/DistributionList.cpp"
    "Common/BO/DistributionListRecipient.cpp"
    "Common/BO/DistributionListRecipients.cpp"
    "Common/BO/DistributionLists.cpp"
    "Common/BO/DNSBlackList.cpp"
    "Common/BO/DNSBlackLists.cpp"
    "Common/BO/Domain.cpp"
    "Common/BO/DomainAlias.cpp"
    "Common/BO/DomainAliases.cpp"
    "Common/BO/Domains.cpp"
    "Common/BO/FetchAccount.cpp"
    "Common/BO/FetchAccounts.cpp"
    "Common/BO/FetchAccountUID.cpp"
    "Common/BO/FetchAccountUIDs.cpp"
    "Common/BO/GreyListingWhiteAddress.cpp"
    "Common/BO/GreyListingWhiteAddresses.cpp"
    "Common/BO/GreyListTriplet.cpp"
    "Common/BO/Group.cpp"
    "Common/BO/GroupMember.cpp"
    "Common/BO/GroupMembers.cpp"
    "Common/BO/Groups.cpp"
    "Common/BO/IMAPFolder.cpp"
    "Common/BO/IMAPFolders.cpp"
    "Common/BO/IncomingRelay.cpp"
    "Common/BO/IncomingRelays.cpp"
    "Common/BO/Message.cpp"
    "Common/BO/MessageData.cpp"
    "Common/BO/MessageMetaData.cpp"
    "Common/BO/MessageRecipient.cpp"
    "Common/BO/MessageRecipients.cpp"
    "Common/BO/Messages.cpp"
    "Common/BO/Route.cpp"
    "Common/BO/RouteAddress.cpp"
    "Common/BO/RouteAddresses.cpp"
    "Common/BO/Routes.cpp"
    "Common/BO/Rule.cpp"
    "Common/BO/RuleAction.cpp"
    "Common/BO/RuleActions.cpp"
    "Common/BO/RuleCriteria.cpp"
    "Common/BO/RuleCriterias.cpp"
    "Common/BO/Rules.cpp"
    "Common/BO/ScheduledTask.cpp"
    "Common/BO/ScheduledTask.cpp"
    "Common/BO/SecurityRange.cpp"
    "Common/BO/SecurityRanges.cpp"
    "Common/BO/ServerMessage.cpp"
    "Common/BO/ServerMessages.cpp"
    "Common/BO/SSLCertificate.cpp"
    "Common/BO/SSLCertificates.cpp"
    "Common/BO/SURBLServer.cpp"
    "Common/BO/SURBLServers.cpp"
    "Common/BO/TCPIPPort.cpp"
    "Common/BO/TCPIPPorts.cpp"
    "Common/BO/WhiteListAddress.cpp"
    "Common/BO/WhiteListAddresses.cpp"
    "Common/Cache/AccountSizeCache.cpp"
    "Common/Cache/CacheConfiguration.cpp"
    "Common/Cache/CacheContainer.cpp"
    "Common/Cache/InboxIDCache.cpp"
    "Common/Cache/MessageCache.cpp"
    "Common/Mime/CodePages.cpp"
    "Common/Mime/Mime.cpp"
    "Common/Mime/MimeChar.cpp"
    "Common/Mime/MimeCode.cpp"
    "Common/Mime/MimeTester.cpp"
    "Common/Mime/MimeType.cpp"
    "Common/Persistence/Maintenance/Maintenance.cpp"
    "Common/Persistence/NameChanger.cpp"
    "Common/Persistence/PersistentAccount.cpp"
    "Common/Persistence/PersistentACLPermission.cpp"
    "Common/Persistence/PersistentAlias.cpp"
    "Common/Persistence/PersistentBlockedAttachment.cpp"
    "Common/Persistence/PersistentDistributionList.cpp"
    "Common/Persistence/PersistentDistributionListRecipient.cpp"
    "Common/Persistence/PersistentDNSBlacklist.cpp"
    "Common/Persistence/PersistentDomain.cpp"
    "Common/Persistence/PersistentDomainAlias.cpp"
    "Common/Persistence/PersistentFetchAccount.cpp"
    "Common/Persistence/PersistentFetchAccountUID.cpp"
    "Common/Persistence/PersistentGreyList.cpp"
    "Common/Persistence/PersistentGreyListingWhiteAddress.cpp"
    "Common/Persistence/PersistentGroup.cpp"
    "Common/Persistence/PersistentGroupMember.cpp"
    "Common/Persistence/PersistentIMAPFolder.cpp"
    "Common/Persistence/PersistentIncomingRelay.cpp"
    "Common/Persistence/PersistentLogonFailure.cpp"
    "Common/Persistence/PersistentMessage.cpp"
    "Common/Persistence/PersistentMessageMetaData.cpp"
    "Common/Persistence/PersistentMessageRecipient.cpp"
    "Common/Persistence/PersistentRoute.cpp"
    "Common/Persistence/PersistentRouteAddress.cpp"
    "Common/Persistence/PersistentRule.cpp"
    "Common/Persistence/PersistentRuleAction.cpp"
    "Common/Persistence/PersistentRuleCriteria.cpp"
    "Common/Persistence/PersistentSecurityRange.cpp"
    "Common/Persistence/PersistentServerMessage.cpp"
    "Common/Persistence/PersistentSURBLServer.cpp"
    "Common/Persistence/PersistentTCPIPPort.cpp"
    "Common/Persistence/PersistentWhiteListAddress.cpp"
    "Common/Persistence/PreSaveLimitationsCheck.cpp"
    "Common/SQL/ColumnPositionCache.cpp"
    "Common/SQL/DALConnection.cpp"
    "Common/SQL/DALConnectionFactory.cpp"
    "Common/SQL/DALRecordset.cpp"
    "Common/SQL/DALRecordsetFactory.cpp"
    "Common/SQL/DatabaseConnectionManager.cpp"
    "Common/SQL/DatabaseSettings.cpp"
    "Common/SQL/IPAddressSQLHelper.cpp"
    "Common/SQL/Macros/Macro.cpp"
    "Common/SQL/Macros/MacroParser.cpp"
    "Common/SQL/Macros/PGSQLMacroExpander.cpp"
    "Common/SQL/PGConnection.cpp"
    "Common/SQL/PGRecordset.cpp"
    "Common/SQL/Prerequisites/PreReqNoDuplicateFolders.cpp"
    "Common/SQL/Prerequisites/PrerequisiteList.cpp"
    "Common/SQL/SQLCommand.cpp"
    "Common/SQL/SQLParameter.cpp"
    "Common/SQL/SQLScriptParser.cpp"
    "Common/SQL/SQLScriptRunner.cpp"
    "Common/SQL/SQLStatement.cpp"
    "Common/TCPIP/CertificateVerifier.cpp"
    "Common/TCPIP/DNSRecord.cpp"
    "Common/TCPIP/DNSResolver.cpp"
    "Common/TCPIP/HostNameAndIpAddress.cpp"
    "Common/TCPIP/hRMS/hRMS_Domains.cpp"
    "Common/TCPIP/hRMS/hRMS_server_main.cpp"
    "Common/TCPIP/IOOperation.cpp"
    "Common/TCPIP/IOOperationQueue.cpp"
    "Common/TCPIP/IOQueueWorkerTask.cpp"
    "Common/TCPIP/IOService.cpp"
    "Common/TCPIP/IPAddress.cpp"
    "Common/TCPIP/LocalIPAddresses.cpp"
    "Common/TCPIP/SslContextInitializer.cpp"
    "Common/TCPIP/SynchronousConnection.cpp"
    "Common/TCPIP/TCPConnection.cpp"
    "Common/TCPIP/TCPConnectionFactory.cpp"
    "Common/TCPIP/TCPServer.cpp"
    "Common/Threading/Task.cpp"
    "Common/Threading/WorkQueue.cpp"
    "Common/Threading/WorkQueueManager.cpp"
    "Common/Tracking/ChangeNotification.cpp"
    "Common/Tracking/NotificationClient.cpp"
    "Common/Tracking/NotificationClientSubscription.cpp"
    "Common/Tracking/NotificationServer.cpp"
    "Common/Util/AccountLogon.cpp"
    "Common/Util/AWStats.cpp"
    "Common/Util/BlowFish.cpp"
    "Common/Util/ByteBuffer.cpp"
    "Common/Util/Charset.cpp"
    "Common/Util/Crypt.cpp"
    "Common/Util/EmailAllUsers.cpp"
    "Common/Util/Encoding/Base64.cpp"
    "Common/Util/Encoding/ModifiedUTF7.cpp"
    "Common/Util/Event.cpp"
    "Common/Util/EventTester.cpp"
    "Common/Util/ExceptionLogger.cpp"
    "Common/Util/File.cpp"
    "Common/Util/FileInfo.cpp"
    "Common/Util/FolderManipulationLock.cpp"
    "Common/Util/GUIDCreator.cpp"
    "Common/Util/Hashing/HashCreator.cpp"
    "Common/Util/HTTPClient.cpp"
    "Common/Util/MailerDaemonAddressDeterminer.cpp"
    "Common/Util/Math.cpp"
    "Common/Util/MessageAttachmentStripper.cpp"
    "Common/Util/MessageUtilities.cpp"
    "Common/Util/Parsing/AddresslistParser.cpp"
    "Common/Util/Parsing/StringParser.cpp"
    "Common/Util/Parsing/StringTreeParser.cpp"
    "Common/Util/PasswordGenerator.cpp"
    "Common/Util/PasswordRemover.cpp"
    "Common/Util/PasswordValidator.cpp"
    "Common/Util/RegularExpression.cpp"
    "Common/Util/runtime_variables.cpp"
    "Common/Util/ServerInfo.cpp"
    "Common/Util/ServerStatus.cpp"
    "Common/Util/SignatureAdder.cpp"
    "Common/Util/Strings/FormatArgument.cpp"
    "Common/Util/Strings/Formatter.cpp"
    "Common/Util/Time.cpp"
    "Common/Util/TLD.cpp"
    "Common/Util/TraceHeaderWriter.cpp"
    "Common/Util/TransparentTransmissionBuffer.cpp"
    "Common/Util/Unicode.cpp"
    "Common/Util/Utilities.cpp"
    "Common/Util/VariantDateTime.cpp"
    "Common/Util/XMLite.cpp"
    "ExternalFetcher/ExternalFetch.cpp"
    "ExternalFetcher/ExternalFetchManager.cpp"
    "ExternalFetcher/ExternalFetchTask.cpp"
    "ExternalFetcher/FetchAccountUIDList.cpp"
    "ExternalFetcher/POP3ClientConnection.cpp"
    "IMAP/FolderListCreator.cpp"
    "IMAP/IMAPACLHelper.cpp"
    "IMAP/IMAPCommand.cpp"
    "IMAP/IMAPCommandAppend.cpp"
    "IMAP/IMAPCommandAuthenticate.cpp"
    "IMAP/IMAPCommandCapability.cpp"
    "IMAP/IMAPCommandCheck.cpp"
    "IMAP/IMAPCommandClose.cpp"
    "IMAP/IMAPCommandCopy.cpp"
    "IMAP/IMAPCommandCreate.cpp"
    "IMAP/IMAPCommandDelete.cpp"
    "IMAP/IMAPCommandDeleteAcl.cpp"
    "IMAP/IMAPCommandExamine.cpp"
    "IMAP/IMAPCommandExpunge.cpp"
    "IMAP/IMAPCommandFetch.cpp"
    "IMAP/IMAPCommandGetAcl.cpp"
    "IMAP/IMAPCommandGetQuota.cpp"
    "IMAP/IMAPCommandGetQuotaRoot.cpp"
    "IMAP/IMAPCommandIdle.cpp"
    "IMAP/IMAPCommandList.cpp"
    "IMAP/IMAPCommandListRights.cpp"
    "IMAP/IMAPCommandLogin.cpp"
    "IMAP/IMAPCommandLogout.cpp"
    "IMAP/IMAPCommandLSUB.CPP"
    "IMAP/IMAPCommandMyRights.cpp"
    "IMAP/IMAPCommandNamespace.cpp"
    "IMAP/IMAPCommandRangeAction.cpp"
    "IMAP/IMAPCommandRename.cpp"
    "IMAP/IMAPCommandSearch.cpp"
    "IMAP/IMAPCommandSelect.cpp"
    "IMAP/IMAPCommandSetAcl.cpp"
    "IMAP/IMAPCommandStartTls.cpp"
    "IMAP/IMAPCommandStatus.cpp"
    "IMAP/IMAPCommandStore.cpp"
    "IMAP/IMAPCommandSubscribe.cpp"
    "IMAP/IMAPCommandUID.cpp"
    "IMAP/IMAPCommandUnsubscribe.cpp"
    "IMAP/IMAPConfiguration.cpp"
    "IMAP/IMAPConnection.cpp"
    "IMAP/IMAPCopy.cpp"
    "IMAP/IMAPFetch.cpp"
    "IMAP/IMAPFetchParser.cpp"
    "IMAP/IMAPFolderContainer.cpp"
    "IMAP/IMAPFolderUtilities.cpp"
    "IMAP/IMAPListLookup.cpp"
    "IMAP/IMAPNotificationClient.cpp"
    "IMAP/IMAPResult.cpp"
    "IMAP/IMAPSearchParser.cpp"
    "IMAP/IMAPSimpleCommandParser.cpp"
    "IMAP/IMAPSort.cpp"
    "IMAP/IMAPSortParser.cpp"
    "IMAP/IMAPStore.cpp"
    "IMAP/MessagesContainer.cpp"
    "IMAP/StaticIMAPCommandHandlers.cpp"
    "POP3/POP3Configuration.cpp"
    "POP3/POP3Connection.cpp"
    "POP3/POP3Sessions.cpp"
    "SMTP/BLCheck.cpp"
    "SMTP/DeliveryQueue.cpp"
    "SMTP/DeliveryTask.cpp"
    "SMTP/ExternalDelivery.cpp"
    "SMTP/GreyListCleanerTask.cpp"
    "SMTP/GreyListing.cpp"
    "SMTP/LocalDelivery.cpp"
    "SMTP/MirrorMessage.cpp"
    "SMTP/PlusAddressing.cpp"
    "SMTP/RecipientParser.cpp"
    "SMTP/RuleApplier.cpp"
    "SMTP/RuleResult.cpp"
    "SMTP/ServerTargetResolver.cpp"
    "SMTP/SMTPClientConnection.cpp"
    "SMTP/SMTPConfiguration.cpp"
    "SMTP/SMTPConnection.cpp"
    "SMTP/SMTPDeliverer.cpp"
    "SMTP/SMTPDeliveryManager.cpp"
    "SMTP/SMTPForwarding.cpp"
    "SMTP/SMTPMessageHeaderCreator.cpp"
    "SMTP/SMTPVacationMessageCreator.cpp"
    "SMTP/SMTPVirusNotifier.cpp"
    "SMTP/SPF/RMSPF.cpp"
    "SMTP/SPF/SPF.cpp"
    "Start/pch.cpp"
    "Start/hMailServer.cpp"
)


# Add source to this project's executable.
add_executable(hMailServerX 	
	
    ${HEADER_FILES} # Refence to Header files    
    ${SOURCE_FILES} # Refernce to Source code files
)

set_target_properties(hMailServerX PROPERTIES LANGUAGE CXX)


target_precompile_headers(hMailServerX PRIVATE Start/pch.h)

# Link libraries to executable

target_include_directories(hMailServerX PRIVATE ${A_HEADER_FILES} )
target_include_directories(hMailServerX PRIVATE ${Boost_INCLUDE_DIRS} )

target_link_libraries(hMailServerX PRIVATE ${A_LIB_FILES} )
target_link_libraries(hMailServerX PRIVATE ${Boost_LIBRARIES} )
target_link_libraries(hMailServerX PRIVATE OpenSSL::SSL OpenSSL::Crypto)


